# vcf2xlsx

./: LICENSE  README.md  pyproject.toml
examples/: example.xlsx
src/vcf2xlsx/: main.py
