[project]
name = "vcf2xlsx"
version = "0.1.0"
description = ""
authors = [
    {name = "Trent Zeng",email = "trentzz.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "vcf2pandas (>=0.1.2,<0.2.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "vcf2xlsx", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vcf2xlsx = "vcf2xlsx.main:main"
