[project]
name = "vcf2xlsx"
version = "0.2.0"
description = "CLI tool to convert a vcf file to an xlsx file"
authors = [
    {name = "Trent Zeng",email = "trentzz.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "vcf2pandas (>=0.2.0,<0.3.0)"
]

[tool.poetry]
packages = [{include = "vcf2xlsx", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vcf2xlsx = "vcf2xlsx.main:main"
